--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,9 @@
     --ring: 0 0% 3.9%;
 
     --radius: 0.5rem;
+
+    --subida-pink: 345 70% 52%;
+    --subida-pink-foreground: 345 80% 52%;
   }
 
   .dark {
@@ -63,6 +66,9 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
+
+    --subida-pink: 345 70% 52%;
+    --subida-pink-foreground: 345 80% 52%;
   }
 }
 
