--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,10 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  .logo {
+    @apply font-semibold text-[0.9rem];
+  }
 }
 
 @layer prose-m-none {
